--- a/style.css
+++ b/style.css
@@ -1,16 +1,26 @@
 body{
     background-color: black;
+    margin: 0px;
+    border: 0px;
 }
 .row div{
-    width: 20px;
-    height: 20px;
     display: inline-block;
+    vertical-align: top;
+    height: 50px;
+    width: 50px;
+      
 }
-
-
 
 .brick{
     background-color: blue;
+
+}
+
+.pizza{
+    background: url("pizza.gif");
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
 }
 
 .coin{
@@ -20,11 +30,47 @@ body{
     background-position: center;
 }
 
-.pacman{
+.ghost{
+    background: url("ghost.gif");
+    background-size: cover;         /*try 70px 70px after ghost is eating up*/
+    background-repeat: no-repeat;
+    background-position: center;
+}
+#pacman{
     background: url("pacman.gif");
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
+    width: 50px;
+    height: 50px;
+    position: absolute; /* defines where exactly that div/tag goes */
 }
 
+.empty{
+
+}
+
+#score{
+    display: inline-block;
+    border: 1px solid white;
+    width: 45px;
+    height: 30px;
+    color: white;
+    padding: 7px;
+    text-align: center;
+    margin-top: 15px;
+    font-size: 30px;
+}
+
+#life{
+    display: inline-block;
+    border: 1px solid white;
+    width: 45;
+    height: 30px;
+    color: white;
+    padding: 7px;
+    text-align: center;
+    margin-top: 15px;
+    font-size: 30px;
+}
 
